--- a/app/src/main/res/layout/item_text.xml
+++ b/app/src/main/res/layout/item_text.xml
@@ -6,4 +6,5 @@
     android:layout_height="50dp"
     android:gravity="center"
     android:textSize="30sp"
+    tools:textColor="@color/white"
     tools:text="Text Header#1" />
