--- a/app/src/main/res/layout/view_custom_view_group_left.xml
+++ b/app/src/main/res/layout/view_custom_view_group_left.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:parentTag="ru.gorshenev.themesstyles.CustomViewGroup">
+    tools:parentTag="ru.gorshenev.themesstyles.CustomViewGroupLeft">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/ivAvatar"
         android:layout_width="38dp"
         android:layout_height="38dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="10dp"
         android:src="@drawable/ic_launcher_background"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
         tools:src="@tools:sample/avatars" />
