added 3 fragments, fragment navigation panel

--- a/app/src/main/res/layout/item_date.xml
+++ b/app/src/main/res/layout/item_date.xml
@@ -14,7 +14,7 @@
         android:layout_gravity="top|center"
         android:gravity="center"
         android:textColor="#999999"
-        android:background="@drawable/date_bg"
+        android:background="@drawable/bg_date"
         android:textSize="14sp"
         tools:text="1 Feb" />
 </LinearLayout>
