--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,6 +23,10 @@
         <item name="cornerSize">50%</item>
     </style>
 
+    <style name="ShapeAppearanceOverlay.App.CornerSize15dp" parent="">
+        <item name="cornerSize">15dp</item>
+    </style>
+
     <style name="CardViewLeft" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="contentPaddingLeft">13dp</item>
         <item name="contentPaddingRight">13dp</item>
