--- a/app/src/main/res/layout/fragment_people.xml
+++ b/app/src/main/res/layout/fragment_people.xml
@@ -13,12 +13,24 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <include
+        android:id="@+id/one"
         layout="@layout/component_people"
         android:layout_width="match_parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="16dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/users_field" />
+
+    <include
+        android:id="@+id/two"
+        layout="@layout/component_people"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/one" />
+
+    <include
+        layout="@layout/component_people"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/two" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
