--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,5 +50,14 @@
     <style name="Widget.MyApp.BottomSheetDialog" parent="Theme.Design.BottomSheetDialog">
         <item name="bottomSheetStyle">@style/Widget.MyApp.BottomSheet.Modal</item>
     </style>
+    
+    <style name="Widget.MyApp.BottomNavigationView" parent="Widget.MaterialComponents.BottomNavigationView.Colored">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.MyApp.BottomNavigationView</item>
+    </style>
+    
+    <style name="ThemeOverlay.MyApp.BottomNavigationView" parent="">
+        <item name="colorPrimary">#1E1E1E</item>
+        <item name="colorOnPrimary">#FAFAFA</item>
+    </style>
 
 </resources>
