--- a/app/src/main/res/layout/component_channels_stream.xml
+++ b/app/src/main/res/layout/component_channels_stream.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="63dp">
+    android:layout_height="64dp">
 
     <TextView
         android:layout_width="276dp"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_channel"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
+        android:id="@+id/tv_stream"
         android:layout_marginLeft="20dp"
-        android:gravity="start"
         android:text="#general"
+        android:layout_gravity="start|center"
         android:textColor="#FAFAFA"
         android:textColorHint="@color/white"
         android:textSize="18sp" />
@@ -19,9 +17,8 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:layout_gravity="end|center"
         android:layout_marginRight="42dp"
-        android:layout_alignParentEnd="true"
         android:src="@drawable/icon_arrow_down" />
 
-</RelativeLayout>
+</FrameLayout>
