--- a/app/src/main/res/layout/fragment_channels.xml
+++ b/app/src/main/res/layout/fragment_channels.xml
@@ -6,18 +6,34 @@
 
     <include
         android:id="@+id/search_field"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         layout="@layout/search_field"
+        android:layout_width="match_parent"
+        android:layout_height="66dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:contentDescription="tabLayout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search_field" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/fragmentViewPager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tabLayout" />
+
 
     <include
-        layout="@layout/component_chanels"
+        layout="@layout/component_channels_stream"
         android:layout_width="match_parent"
         android:layout_height="63dp"
-        app:layout_constraintTop_toBottomOf="@+id/search_field"
-        />
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
