--- a/app/src/main/res/layout/users_field.xml
+++ b/app/src/main/res/layout/users_field.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="56dp"
     android:background="#1E1E1E">
 
     <EditText
         android:id="@+id/et_users"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
+        android:layout_width="310dp"
+        android:layout_height="56dp"
         android:layout_marginLeft="20dp"
         android:maxLines="1"
-        android:layout_marginRight="36dp"
-        android:layout_toStartOf="@+id/iv_search"
         android:backgroundTint="#1E1E1E"
         android:fontFamily="sans-serif-thin"
         android:hint="Users..."
-        android:paddingLeft="28dp"
+        android:paddingLeft="30dp"
         android:textColor="@color/white"
         android:textColorHint="#FFFFFF"
         android:textSize="24sp"
@@ -25,12 +21,11 @@
 
     <ImageView
         android:id="@+id/iv_search"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_gravity="right|center"
         android:layout_marginRight="28dp"
         android:src="@drawable/icon_search" />
 
 
-</RelativeLayout>
+</FrameLayout>
