--- a/app/src/main/res/layout/fragment_channels.xml
+++ b/app/src/main/res/layout/fragment_channels.xml
@@ -1,39 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <include
         android:id="@+id/search_field"
         layout="@layout/search_field"
         android:layout_width="match_parent"
-        android:layout_height="66dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="56dp" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:contentDescription="tabLayout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/search_field" />
+        android:contentDescription="tabLayout" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/fragmentViewPager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tabLayout" />
+        android:layout_height="match_parent" />
 
 
-    <include
-        layout="@layout/component_channels_stream"
-        android:layout_width="match_parent"
-        android:layout_height="63dp"
-        android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
