--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/iv_avatar"
+        android:id="@+id/iv_people_avatar"
         android:layout_width="186dp"
         android:layout_height="186dp"
         android:layout_marginTop="126dp"
@@ -21,7 +21,7 @@
         tools:src="@drawable/ic_launcher_background" />
 
     <TextView
-        android:id="@+id/tv_name"
+        android:id="@+id/tv_people_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name Surname"
@@ -30,7 +30,7 @@
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_avatar"
+        app:layout_constraintTop_toBottomOf="@id/iv_people_avatar"
         tools:text="@tools:sample/full_names" />
 
     <TextView
@@ -44,7 +44,7 @@
         app:layout_constraintEnd_toStartOf="@id/online"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_name"
+        app:layout_constraintTop_toBottomOf="@id/tv_people_name"
         tools:text="In a meeting" />
 
     <TextView
@@ -57,7 +57,7 @@
         android:text="online"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_status"
-        app:layout_constraintTop_toBottomOf="@id/tv_name"
+        app:layout_constraintTop_toBottomOf="@id/tv_people_name"
         tools:text="online" />
 
     <Button
