--- a/app/src/main/res/layout/item_date.xml
+++ b/app/src/main/res/layout/item_date.xml
@@ -7,7 +7,7 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/textHolder"
+        android:id="@+id/tv_date"
         android:layout_width="76dp"
         android:layout_marginBottom="19dp"
         android:layout_height="22dp"
