--- a/app/src/main/res/layout/users_field.xml
+++ b/app/src/main/res/layout/users_field.xml
@@ -9,10 +9,10 @@
         android:layout_width="310dp"
         android:layout_height="56dp"
         android:layout_marginLeft="20dp"
-        android:maxLines="1"
         android:backgroundTint="#1E1E1E"
         android:fontFamily="sans-serif-thin"
         android:hint="Users..."
+        android:maxLines="1"
         android:paddingLeft="30dp"
         android:textColor="@color/white"
         android:textColorHint="#FFFFFF"
@@ -23,7 +23,7 @@
         android:id="@+id/iv_search"
         android:layout_width="28dp"
         android:layout_height="28dp"
-        android:layout_gravity="right|center"
+        android:layout_gravity="end|center"
         android:layout_marginRight="28dp"
         android:src="@drawable/icon_search" />
 
