--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,8 @@
     <color name="mtrl_blue_500">#2196F3</color>
     <color name="text_color">#FAFAFA</color>
     <color name="time_color">#A1A1A1</color>
+
+    <color name="colorPrimaryBlack">#1E1E1E</color>
+    <color name="colorPrimaryBlue">#2A9D8F</color>
+    <color name="colorBackground">#121212</color>
 </resources>
