--- a/app/src/main/res/drawable/bg_emoji_selected.xml
+++ b/app/src/main/res/drawable/bg_emoji_selected.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="10dp"/>
-<!--    <stroke-->
-<!--        android:width="1dp"-->
-<!--        android:color="@android:color/black"/>-->
-    <solid
-        android:color="#3A3A3A"/>
+    <corners android:radius="10dp" />
+    <solid android:color="#3A3A3A" />
 </shape>
