--- a/app/src/main/res/layout/fragment_channels_stream.xml
+++ b/app/src/main/res/layout/fragment_channels_stream.xml
@@ -1,11 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rv_streams"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-    tools:listitem="@layout/item_channels_stream">
+    android:orientation="vertical">
 
-</androidx.recyclerview.widget.RecyclerView>
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_channels"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <include layout="@layout/item_channels_stream_shimmer" />
+            <include layout="@layout/item_channels_stream_shimmer" />
+            <include layout="@layout/item_channels_stream_shimmer" />
+            <include layout="@layout/item_channels_stream_shimmer" />
+            <include layout="@layout/item_channels_stream_shimmer" />
+            <include layout="@layout/item_channels_stream_shimmer" />
+            <include layout="@layout/item_channels_stream_shimmer" />
+            <include layout="@layout/item_channels_stream_shimmer" />
+            <include layout="@layout/item_channels_stream_shimmer" />
+            <include layout="@layout/item_channels_stream_shimmer" />
+        </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_streams"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_channels_stream" />
+
+
+</LinearLayout>
