--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".presentation.ui.channels.MainActivity">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container_view"
-        android:name="ru.gorshenev.themesstyles.fragments.ChannelsFragment"
+        android:name="ru.gorshenev.themesstyles.presentation.ui.channels.ChannelsFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="9"
