--- a/app/src/main/res/layout/view_custom_view_group_right.xml
+++ b/app/src/main/res/layout/view_custom_view_group_right.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:parentTag="ru.gorshenev.themesstyles.views.CustomViewGroupRight">
+    tools:parentTag="ru.gorshenev.themesstyles.presentation.ui.chat.views.CustomViewGroupRight">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/background"
@@ -32,7 +32,7 @@
             tools:text="@tools:sample/date/hhmm" />
     </androidx.cardview.widget.CardView>
 
-    <ru.gorshenev.themesstyles.views.FlexboxLayout
+    <ru.gorshenev.themesstyles.presentation.ui.chat.views.FlexboxLayout
         android:id="@+id/flexbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
