--- a/app/src/main/res/drawable/bg_people_indicator_idle.xml
+++ b/app/src/main/res/drawable/bg_people_indicator_idle.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#E93939" />
+        <solid android:color="#F09224" />
     <stroke
         android:width="2dp"
         android:color="?android:windowBackground" />
