--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -28,6 +28,46 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         tools:text="Topic: #topic_name" />
 
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_chat"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/et_msgField"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_topic_name">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <include layout="@layout/item_date_shimmer" />
+
+            <include layout="@layout/view_message_left_shimmer" />
+
+            <include layout="@layout/item_date_shimmer" />
+
+            <include layout="@layout/view_message_right_shimmer" />
+
+            <include layout="@layout/item_date_shimmer" />
+
+            <include layout="@layout/view_message_right_shimmer" />
+
+            <include layout="@layout/item_date_shimmer" />
+
+            <include layout="@layout/view_message_left_shimmer" />
+
+            <include layout="@layout/item_date_shimmer" />
+
+            <include layout="@layout/view_message_right_shimmer" />
+
+            <include layout="@layout/item_date_shimmer" />
+
+            <include layout="@layout/view_message_left_shimmer" />
+        </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_items"
         android:layout_width="match_parent"
