--- a/app/src/main/res/layout/item_channels_topic.xml
+++ b/app/src/main/res/layout/item_channels_topic.xml
@@ -9,6 +9,10 @@
         android:id="@+id/tv_topic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:shadowColor="@color/black"
+        android:shadowRadius="3"
+        android:shadowDy="3"
+        android:shadowDx="3"
         android:layout_gravity="start|center"
         android:layout_marginLeft="42dp"
         android:textColor="#FAFAFA"
