--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -21,7 +21,9 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="#1C1C1C"
+        android:ellipsize="end"
         android:gravity="center"
+        android:maxLines="1"
         android:textColor="#CCCCCC"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
